--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,43 @@ header a {
   font-size: 12px;
 }
 
-@media (max-width: 800px) {
+footer {
+  color: white;
+  background-image: linear-gradient(
+      rgba(76, 72, 25, 0.7),
+      rgba(76, 72, 25, 0.7)
+    ),
+    url(https://i0.wp.com/enthusiasticgardener.com/wp-content/uploads/2019/11/19-11-19-Telegraph-Hill-Park-LR-3893.jpg?resize=1200%2C800&ssl=1);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 12px;
+  padding: 50px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+footer ul {
+  padding: 0;
+  margin-right: 20px;
+}
+footer li {
+  list-style: none;
+}
+
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+
+footer p {
+  opacity: 0.7;
+  margin-right: 20px;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 50px;
   }
