--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,12 @@ body {
   margin: 0 auto;
 }
 
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(https://i0.wp.com/enthusiasticgardener.com/wp-content/uploads/2019/11/19-11-19-Telegraph-Hill-Park-LR-3893.jpg?resize=1200%2C800&ssl=1);
@@ -47,6 +53,19 @@ header a {
   font-size: 12px;
 }
 
+main {
+  background-color: white;
+  color: #4c4819;
+  margin: 0;
+  font-size: 14px;
+}
+
+.img-park {
+  max-width: 100%;
+  padding: 5px;
+  margin: 0 auto;
+}
+
 footer {
   color: white;
   background-image: linear-gradient(
@@ -62,7 +81,14 @@ footer {
 
 .grid {
   display: grid;
+  grid-gap: 60px;
+}
+.grid3 {
   grid-template-columns: 1fr 2fr 2fr;
+}
+
+.grid2 {
+  grid-template-columns: 1fr 1fr;
 }
 
 footer ul {
@@ -80,7 +106,6 @@ footer a {
 
 footer p {
   opacity: 0.7;
-  margin-right: 20px;
 }
 
 @media (max-width: 960px) {
@@ -98,5 +123,10 @@ footer p {
 
   header h2 {
     font-size: 20px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
   }
 }
